--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,11 @@ body{
     background-color: #f4f5f8;
 }
 
+#twitterImage{
+    width:80px;
+    height:80px;
+}
+
 .title{
     background: linear-gradient(to right, white, #0178db);
     color: white;
@@ -9,7 +14,7 @@ body{
     margin: 5px 10px;
 }
 
-#readCounter{
+.read-counter{
     font-size: 20px;
     margin-top: 25px;
     margin-right: 10px;
